--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <i class="fas fa-phone-alt"></i>
           </div>
           <h3>CONTACT NUMBER</h3>
-          <p><a href="tel://7899178078">+91 7899178078</a></p>
+          <p><a href="tel://7899178078">+91 1234567890</a></p>
         </div>
 
         <div class="contact-box">
@@ -104,7 +104,7 @@
             <i class="fas fa-paper-plane"></i>
           </div>
           <h3>EMAIL ADDRESS</h3>
-          <p><a href="mailto:contactnandanpai@gmail.com">contactnandanpai@gmail.com</a></p>
+          <p><a href="mailto:contactnandanpai@gmail.com">yourmail@gmail.com</a></p>
         </div>
       </div>
       <br>
