--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="assets/logo.jpg" type="image/png">
   <title>Ashish Anand – Video Editor & Motion Designer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
@@ -76,7 +77,7 @@
   <!-- Hero -->
   <section class="hero" id="home">
     <video autoplay muted loop class="bg-video">
-      <source src="assets/video-bg.mp4" type="video/mp4" />
+      <source src="assets/My Video.mp4" type="video/mp4" />
     </video>
     <div class="overlay"></div>
     <div class="hero-content" style="color: white;">
