--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <div class="contact-box">
         <div class="icon-circle"><i class="fas fa-phone-alt"></i></div>
         <h3>Phone</h3>
-        <p><a href="tel:+1234">+91 1234567890</a></p>
+        <p><a href="tel:+918104955780">+91 8104955780</a></p>
       </div>
       <div class="contact-box">
         <div class="icon-circle"><i class="fas fa-paper-plane"></i></div>
@@ -403,9 +403,9 @@
       Visitors: <span id="visitor-count" style="color: #ffbd39; font-weight: 700;">0</span>
     </p>
     <div class="socials">
-      <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <!-- <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a> -->
       <a href="https://www.instagram.com/ashish.anand7/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+      <!-- <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a> -->
     </div>
     <p style="color: white;">&copy;
       <script>document.write(new Date().getFullYear());</script> All rights reserved | This portfolio is made with
