--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <span class="fa fa-star" data-rating="4" ></span>
             <span class="fa fa-star" data-rating="5" ></span>
           </div>
-          <p id="rating-result" class="mt-3" data-aos="fade-up">No rating yet</p>
+          <p id="rating-result" class="mt-3" data-aos="fade-up">You are not rated yet</p>
           <p id="averageRating" class="mt-3" data-aos="fade-up">Total Ratings: Loding... </p>
           <div id="averageRatingContainer">
             <p id="averageRating" data-aos="fade-up"></p>
