--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
     </p>
     <div class="socials">
       <!-- <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a> -->
-      <a href="https://www.instagram.com/ashish.anand7/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/ashish.anand7/" aria-label="Instagram"><i class="fab fa-instagram"> </i> Instagram</a>
       <!-- <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a> -->
     </div>
     <p style="color: white;">&copy;
