--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
     </div>
     <br>
     <p style="color: white;">&copy;
-      <script>document.write(new Date().getFullYear());</script> All rights reserved | This portfolio is made with
-      <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
+      <script>document.write(new Date().getFullYear());</script> All rights reserved | This portfolio is made by<a
         href="https://www.linkedin.com/in/aritra-deb-bb16131a3/" target="_blank"
         style="color: #ffbd39; font-weight: bold;">Aritra Deb</a>
     </p>
